# intakectf-2022

./: .gitignore  README.md  pyproject.toml
challenges/aes_1/aes_1/: Dockerfile
challenges/aes_1/server/: aes_1.py  flag.txt
challenges/aes_1/writeup/: solve.py
challenges/bof_1/server/: Dockerfile  bof_1  bof_1.c  flag.txt
challenges/bof_1/writeup/: exploit.py
challenges/bof_2/server/: Dockerfile  bof_2  bof_2.c  flag.txt
challenges/bof_2/writeup/: exploit.py
challenges/bof_3/server/: Dockerfile  bof_3  bof_3.c  flag.txt
challenges/bof_3/writeup/: exploit.py
challenges/rsa_1/generate/: flag.txt  rsa_1.py
challenges/rsa_1/writeup/: solve.py
challenges/rsa_2/generate/: flag.txt  rsa_2.py
challenges/rsa_2/writeup/: solve.py
challenges/simple_dotnet/generate/SimpleDotNet/: SimpleDotNet.sln
challenges/simple_dotnet/writeup/: solve.py
challenges/simple_linux/generate/: simple_linux  simple_linux.c
challenges/sqli_1/server/: Dockerfile  sqli_1.py
challenges/sqli_1/server/templates/: base.html  home.html
challenges/sqli_1/writeup/: solve.txt
challenges/sqli_2/server/: Dockerfile  sqli_2.py
challenges/sqli_2/server/templates/: error.html  home.html  search.html
challenges/sqli_2/writeup/: solve.txt
challenges/sqli_3/server/: Dockerfile  quotes.txt  sqli_3.py
challenges/sqli_3/server/templates/: home.html
challenges/sqli_3/writeup/: solve.py
challenges/work_in_progress/server/: Dockerfile  flag.txt  work_in_progress.py
challenges/work_in_progress/server/templates/: base.html  (+2 more)
challenges/work_in_progress/writeup/: exploit.py
(+1 files in other folders)
